# data-engineer-job-requirements-scraping

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
infra/elastic-start-local/: start.sh
src/: entities.py  helpers.py  infra.py  load.py  login.py  processing.py  scraping.py
src/data_engineer_jobs_scraping/: aa.html  entities.py  helpers.py  main.py  scraping.py
